[package]
name = "rusty_mcore"
version = "0.1.0"
edition = "2021"
authors = ["marsevilspirit <marsevilspirit@gmail.com>"]

[dependencies]
bootloader = "0.9"
volatile = "0.2.6"
spin = "0.5.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort" # 禁用panic时栈展开

[profile.release]
panic = "abort" # 禁用panic时栈展开
